snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
3197d6e1e61877d316528e2aecb1301eb5d4bbe20f7420dae09ca6dbfc07180980f8b5fa89229c24d1a2272b53de8443581854225dae7bde806c15acb74ed1e4